syntax = "proto3";

package user;

option go_package = "github.com/hobbyfarm/gargantua/v3/protos/user;userpb";

import "general/general.proto";
import "google/protobuf/empty.proto";

// Service definition
service UserSvc {
    rpc CreateUser (CreateUserRequest) returns (general.ResourceId);
    rpc GetUserById (general.GetRequest) returns (User);
    rpc GetUserByEmail (GetUserByEmailRequest) returns (User);
    rpc UpdateUser (User) returns (User);
    rpc SetLastLoginTimestamp (general.ResourceId) returns (google.protobuf.Empty);
    rpc UpdateAccessCodes (UpdateAccessCodesRequest) returns (User);
    rpc DeleteUser (general.ResourceId) returns (google.protobuf.Empty);
    rpc ListUser (general.ListOptions) returns (ListUsersResponse);
}

message CreateUserRequest {
    string email = 1;
    string password = 2;
}

message UpdateAccessCodesRequest {
    string id = 1;
    repeated string access_codes = 2;
}

message GetUserByEmailRequest {
    string email = 1;
}

message User {
    string id = 1;
    string uid = 2;
    string email = 3;
    string password = 4;
    repeated string access_codes = 5;
    map<string, string> settings = 6;
    string last_login_timestamp = 7;
    string registered_timestamp = 8;
}

message ListUsersResponse {
    repeated User users = 1;
}